# vocavoice

./: .env_example  README.md  pyproject.toml
outputs/: paths_config.yaml
outputs/scripts/: Education.md
src/vocavoice/: __init__.py  crew.py  main.py  ui_vocavoice.py
src/vocavoice/config/: agents.yaml  settings.yaml  tasks.yaml
src/vocavoice/tools/: tts_tool.py
src/vocavoice/ui/: streamlit_ui.py
